--- a/src/components/Popover.css
+++ b/src/components/Popover.css
@@ -11,6 +11,7 @@
     color: #000;
     box-sizing: border-box;
     padding: 60px 0;
+    z-index: 1000;
 }
 
 .modal-over_open {
@@ -50,7 +51,7 @@
 
 .result__img {
     position: relative;
-    margin-bottom: 20px;
+    margin-bottom: 25px;
     border-radius: 5px;
     box-shadow: 3px 3px 6px 0px rgba(0, 0, 0, 0.5);
 }
@@ -73,7 +74,7 @@
 }
 
 .result__share-label {
-    font-size: 14px;
+    font-size: 18px;
     text-transform: uppercase;
     text-align: center;
     margin-bottom: 10px;
