--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -19,10 +19,6 @@
     text-decoration: none;
 }
 
-
-
-
-
 .header__text {
     font-weight: 100;
     font-size: 16px;
@@ -60,6 +56,23 @@
     .header__subtitle {
         text-align: center;
         margin-bottom: 100px;
+    }
+
+    .header__text {
+        font-size: 14px;
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .header__title {
+        margin-top: 50px;
+        text-align: center;
+        font-size: 40px;
+    }
+
+    .header__subtitle {
+        text-align: center;
+        margin-bottom: 80px;
     }
 
     .header__text {
